--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;600;700&display=swap');
 body{
   background-color: gray;
+  font-family: 'Roboto',sans-serif;
 }
 #info{
    z-index: 1;
