--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,14 @@ body{
   background-size: cover;
   font-family: 'Roboto',sans-serif;
   height: 100%;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
 
 #info{
    z-index: 1;
